--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "author": "mr me",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow/tfjs-node": "^3.1.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.2"
+    "express-fileupload": "^1.4.2",
+    "mongodb": "^6.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
